getting data from json-server

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -17,7 +17,7 @@
                         <td>{{product.name}}</td>
                         <td>{{product.price}}</td>
                         <td>
-                            <button (click)="handleCheckProduct(product)" class="btn btn-outline-secondary">
+                            <button (click)="handleCheckedProduct(product)" class="btn btn-outline-secondary">
                                 <i [class]="product.checked?'bi bi-check2-circle':'bi bi-circle'"></i>
                             </button>      
                         </td>
