--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -21,6 +21,11 @@
                                 <i [class]="product.checked?'bi bi-check2-circle':'bi bi-circle'"></i>
                             </button>      
                         </td>
+                        <td>
+                            <button (click)="handleDelete(product)" class="btn btn-outline-danger">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
