--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,10 @@
 <div class="p-3">
     <div class="card">
         <div class="card-body">
+            <div class="card-body">
+                <input type="text" name="" id="" [(ngModel)]="keyword">
+                <button class="btn btn-outline-success m-2" (click)="searchProducts()"><i class="bi bi-search"></i></button>
+            </div>
             <h3>List Of Products</h3>
             <table class="table">
                 <thead>
