--- a/src/app/newproduct/newproduct.component.html
+++ b/src/app/newproduct/newproduct.component.html
@@ -1,7 +1,9 @@
 <div class="p-3">
     <div class="card">
-        <div class="card-body">
+        <div class="card-header">
             <h3>Add New Product</h3>
+        </div>
+        <div class="card-body">
             <form [formGroup]="productForm" (ngSubmit)="saveProduct()">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
