--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="p-3">
     <div class="card">
         <div class="card-body">
-            <div class="card-body">
+            <div class="card-body" *ngId="productFormGroup">
                 <input type="text" name="" id="" [(ngModel)]="keyword">
                 <button class="btn btn-outline-success m-2" (click)="searchProducts()"><i class="bi bi-search"></i></button>
             </div>
@@ -30,9 +30,22 @@
                                 <i class="bi bi-trash"></i>
                             </button>
                         </td>
+                        <td>
+                            <button (click)="handleEdit(product)" class="btn btn-outline-primary">
+                                <i class="bi bi-pencil"></i>
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
+            <ul class="nav nav-pills">
+                <li *ngFor="let page of [].constructor(this.totalPages); let i=index">
+                  <button (click)="handleGotoPage(i+1)"
+                          [ngClass]="currentPage==(i+1)?'btn-success ':'btn-outline-success'" class="btn m-1">
+                    {{(i+1)}}
+                  </button>
+                </li>
+              </ul> 
         </div>
     </div>
 </div>
